log/build_2024-03-01_16-10-30/ar_slam_base/stdout_stderr.log
running egg_info
writing ../../build/ar_slam_base/ar_slam_base.egg-info/PKG-INFO
writing dependency_links to ../../build/ar_slam_base/ar_slam_base.egg-info/dependency_links.txt
writing entry points to ../../build/ar_slam_base/ar_slam_base.egg-info/entry_points.txt
writing requirements to ../../build/ar_slam_base/ar_slam_base.egg-info/requires.txt
writing top-level names to ../../build/ar_slam_base/ar_slam_base.egg-info/top_level.txt
reading manifest file '../../build/ar_slam_base/ar_slam_base.egg-info/SOURCES.txt'
writing manifest file '../../build/ar_slam_base/ar_slam_base.egg-info/SOURCES.txt'
running build
running build_py
copying ar_slam_base/mapping_kf.py -> /home/GTL/wxu/cs7630_g6/build/ar_slam_base/build/lib/ar_slam_base
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/GTL/wxu/cs7630_g6/build/ar_slam_base/build/lib/ar_slam_base/mapping_kf.py -> /home/GTL/wxu/cs7630_g6/install/ar_slam_base/lib/python3.10/site-packages/ar_slam_base
byte-compiling /home/GTL/wxu/cs7630_g6/install/ar_slam_base/lib/python3.10/site-packages/ar_slam_base/mapping_kf.py to mapping_kf.cpython-310.pyc
  File "/home/GTL/wxu/cs7630_g6/install/ar_slam_base/lib/python3.10/site-packages/ar_slam_base/mapping_kf.py", line 114
    logger.info("shape of H:_rr " + str(H_rr.shape), "shape of self.X: " + str(self.X)
               ^
SyntaxError: '(' was never closed

running install_data
running install_egg_info
removing '/home/GTL/wxu/cs7630_g6/install/ar_slam_base/lib/python3.10/site-packages/ar_slam_base-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/ar_slam_base/ar_slam_base.egg-info to /home/GTL/wxu/cs7630_g6/install/ar_slam_base/lib/python3.10/site-packages/ar_slam_base-0.0.0-py3.10.egg-info
running install_scripts
Installing ar_slam_node script to /home/GTL/wxu/cs7630_g6/install/ar_slam_base/lib/ar_slam_base
Installing tb_slam_node script to /home/GTL/wxu/cs7630_g6/install/ar_slam_base/lib/ar_slam_base
writing list of installed files to '/home/GTL/wxu/cs7630_g6/build/ar_slam_base/install.log'
